# R-Type-epitech

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  run_tests.sh  start_project.sh  t
.github/workflows/: main.yml
.tmp/accessibility_requirements/: PhysicalMotor.hpp
.tmp/bootstrap/: Registery.hpp
.tmp/bootstrap/Components/: velocity.hpp
.tmp/bootstrap/System/: controlSystem.cpp  draw_system.cpp  loggingSystem.cpp  positionSystem.cpp
.tmp/game_engine/: GameEngine.cpp  GameEngine.hpp  IGameEngine.hpp
.tmp/system/: soundSystem copy.cpp
assets/shaders/: Achromatopsia_shader.frag  Deuteranopia_shader.frag  Normal_shader.frag  Protanopia_shader.frag  Tritanopia_shader.frag
config/: key.cfg  player.cfg  protocol_config.cfg  scores.cfg
config/Platformer/: game_config.cfg
config/R-Type/: game_config.cfg
config/angry_birds/: game_config.cfg
config/platformer/: game_config.cfg
config/rtype/: game_config.cfg
config/scenes/: Level_1.cfg  Level_2.cfg  Level_3.cfg  Level_4.cfg  Level_5.cfg  SCENE_EXAMPLE.cfg  all_enemy.cfg  hello.cfg  move.cfg  move_1.cfg  move_2.cfg  move_3.cfg  move_4.cfg  sceneText.cfg  test.cfg
documentation/: CONSOLE.md  GAMECONFIG.md  LEVEL.md  LINUX_INSTALL.md  PROTOCOL.md  TECHNICAL_COMPARATIVE_STUDY.md  WINDOWS_INSTALL.md  WORKFLOW.md
documentation/docs/html/: AEngine_8cpp.html  AEngine_8cpp__incl.map  AEngine_8cpp__incl.md5  AEngine_8hpp.html  AEngine_8hpp.js  AEngine_8hpp__dep__incl.map  AEngine_8hpp__dep__incl.md5  AEngine_8hpp__incl.map  AEngine_8hpp__incl.md5  AEngine_8hpp_source.html  AError_8hpp.html  AError_8hpp.js  AError_8hpp__dep__incl.map  AError_8hpp__dep__incl.md5  AError_8hpp__incl.map  AError_8hpp__incl.md5  AError_8hpp_source.html  AudioEngine_8cpp.html  AudioEngine_8cpp.js  AudioEngine_8cpp__incl.map  AudioEngine_8cpp__incl.md5  AudioEngine_8hpp.html  AudioEngine_8hpp.js  AudioEngine_8hpp__dep__incl.map  AudioEngine_8hpp__dep__incl.md5  AudioEngine_8hpp__incl.map  AudioEngine_8hpp__incl.md5  AudioEngine_8hpp_source.html  Button_8cpp.html  Button_8cpp__incl.map  Button_8cpp__incl.md5  Button_8hpp.html  Button_8hpp__dep__incl.map  Button_8hpp__dep__incl.md5  Button_8hpp__incl.map  Button_8hpp__incl.md5  Button_8hpp_source.html  Camera_8hpp.html  Camera_8hpp.js  Camera_8hpp__dep__incl.map  (+1010 more)
documentation/docs/latex/: AEngine_8cpp.tex  AEngine_8cpp__incl.md5  AEngine_8hpp.tex  AEngine_8hpp__dep__incl.md5  AEngine_8hpp__incl.md5  AEngine_8hpp_source.tex  AError_8hpp.tex  AError_8hpp__dep__incl.md5  AError_8hpp__incl.md5  AError_8hpp_source.tex  AudioEngine_8cpp.tex  AudioEngine_8cpp__incl.md5  AudioEngine_8hpp.tex  AudioEngine_8hpp__dep__incl.md5  AudioEngine_8hpp__incl.md5  AudioEngine_8hpp_source.tex  Button_8cpp.tex  Button_8cpp__incl.md5  Button_8hpp.tex  Button_8hpp__dep__incl.md5  Button_8hpp__incl.md5  Button_8hpp_source.tex  Camera_8hpp.tex  Camera_8hpp__dep__incl.md5  Camera_8hpp__incl.md5  Camera_8hpp_source.tex  Charging_8hpp.tex  Charging_8hpp__dep__incl.md5  Charging_8hpp_source.tex  Client_8cpp.tex  Client_8cpp__incl.md5  Client_8hpp.tex  Client_8hpp__dep__incl.md5  Client_8hpp__incl.md5  Client_8hpp_source.tex  Color_8hpp.tex  Color_8hpp__dep__incl.md5  Color_8hpp__incl.md5  Color_8hpp_source.tex  Constants_8hpp.tex  (+384 more)
release/: CMakeLists.txt  install.ps1  linux_installer.sh
src/accessibility_requirements/: PhysicalMotor.cpp
src/asset_editor/: CMakeLists.txt  main.cpp
src/asset_editor/AssetEditor/: AssetEditor.cpp  AssetEditor.hpp
src/asset_editor/EditionScreen/: EditionScreen.cpp  EditionScreen.hpp  LoadScene.cpp  LoadScene.hpp  SaveScene.cpp  SaveScene.hpp
src/asset_editor/Sidebar/: RightSidebar.cpp  RightSidebar.hpp  Toolbar.cpp  Toolbar.hpp  ToolbarButton.cpp  ToolbarButton.hpp
src/asset_editor/Sidebar/assetSelector/: AssetSelector.cpp  AssetSelector.hpp
src/asset_editor/Sidebar/componentsEditor/: ComponentsEditor.cpp  ComponentsEditor.hpp  Input.cpp  Input.hpp  InputNumber.cpp  InputNumber.hpp  SelectButton.cpp  SelectButton.hpp
src/asset_editor/Sidebar/selectBar/: SelectBar.cpp  SelectBar.hpp
src/asset_editor/assetSelector/: AssetSelector.cpp  AssetSelector.hpp
src/asset_editor/history/: AddAsset.cpp  AddAsset.hpp  Asset.cpp  Asset.hpp  CommandManager.cpp  CommandManager.hpp  ICommand.hpp  MoveAsset.cpp  MoveAsset.hpp  RemoveAsset.cpp  RemoveAsset.hpp
src/bootstrap/: Entity.cpp  Registery.hpp  main.cpp
src/bootstrap/Components/: controllable.hpp  drawable.hpp  position.hpp
src/bootstrap/System/: controlSystem.cpp  draw_system.cpp
src/client/: AEngine.cpp  AEngine.hpp  Button.cpp  Camera.hpp  Client.cpp  DLloader.hpp  Game.cpp  Game.hpp  IClient.hpp  IEngine.hpp  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp  main.cpp  menu.cpp  menu.hpp
src/client/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp
src/client/Error/: AError.hpp  DLError.hpp  IError.hpp
src/client/GameEngine/: GameEngine.cpp  GameEngine.hpp  ProtocolParsing.cpp  ProtocolParsing.hpp  protocol_config.cfg
src/client/GameMetrics/: GameMetrics.cpp  GameMetrics.hpp  Latency.cpp  Latency.hpp  Toolbar.cpp  Toolbar.hpp
src/client/Mediator/: IMediator.hpp  Mediator.cpp  Mediator.hpp
src/components/: Camera.cpp  Camera.hpp  Charging.cpp  Charging.hpp  Color.cpp  Color.hpp  Control.cpp  Control.hpp  Controllable.cpp  Controllable.hpp  Damage.cpp  Damage.hpp  Freeze.cpp  Freeze.hpp  Health.cpp  Health.hpp  Level.cpp  Level.hpp  Position.cpp  Position.hpp  Revivable.cpp  Revivable.hpp  Rotation.cpp  Rotation.hpp  Scale.cpp  Scale.hpp  Shoot.cpp  Shoot.hpp  ShootingSpeed.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Tag.cpp  Tag.hpp  Velocity.cpp  Velocity.hpp
src/config/: EditConfigFile.cpp  EditConfigFile.hpp  config.cfg  key.cfg  scores.cfg
src/game_engine/: Entity.hpp  Registery.hpp  SparseArray.hpp
src/network/: Network.hpp  Server.hpp  Session.hpp  client.cpp  server.cpp
src/server/: main.cpp  main_server.cpp
src/system/: controlSystem.cpp  positionSystem.cpp
tests/: CMakeLists.txt
tests/client/: test_NetworkEngine.cpp
(+284 files in other folders)
